--- a/NumerosComplejos/.project
+++ b/NumerosComplejos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rectangulo</name>
+	<name>NumerosComplejos</name>
 	<comment></comment>
 	<projects>
 	</projects>
